--- a/UI/Authentication.OidcDemo/Authentication.OidcDemo/Authentication.OidcDemo.Droid/Authentication.OidcDemo.Droid.csproj
+++ b/UI/Authentication.OidcDemo/Authentication.OidcDemo/Authentication.OidcDemo.Droid/Authentication.OidcDemo.Droid.csproj
@@ -68,11 +68,16 @@
     <PackageReference Include="Uno.UniversalImageLoader" Version="1.9.33" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
+    <PackageReference Include="Xamarin.Android.Support.CustomTabs" Version="28.0.0.3" />
+    <PackageReference Include="Xamarin.AndroidX.Lifecycle.LiveData" Version="2.1.0" />
+    <PackageReference Include="Xamarin.AndroidX.Browser" Version="1.0.0" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChromeCustomTabsProvider.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Main.cs" />
+    <Compile Include="WebAuthenticationBrokerActivity.cs" />
   </ItemGroup>
   <ItemGroup>
     <AndroidAsset Include="Assets\Fonts\uno-fluentui-assets.ttf" />
