--- a/UI/UnoMaterialSample/UnoMaterialSample.Skia.Gtk/UnoMaterialSample.Skia.Gtk.csproj
+++ b/UI/UnoMaterialSample/UnoMaterialSample.Skia.Gtk/UnoMaterialSample.Skia.Gtk.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType Condition="'$(Configuration)'=='Release'">WinExe</OutputType>
@@ -17,8 +17,9 @@
     <!-- Note that for WebAssembly version 1.1.1 of the console logger required -->
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
-    <PackageReference Include="Uno.UI.Skia.Gtk" Version="3.5.1" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="3.5.1" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.Material" Version="1.0.0-dev.715" />
+    <PackageReference Include="Uno.UI.Skia.Gtk" Version="3.6.0-dev.275" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="3.6.0-dev.275" Condition="'$(Configuration)'=='Debug'" />
   </ItemGroup>
   <Import Project="..\UnoMaterialSample.Shared\UnoMaterialSample.Shared.projitems" Label="Shared" />
 </Project>
