--- a/UI/UnoMaterialSample/UnoMaterialSample.Skia.Tizen/UnoMaterialSample.Skia.Tizen.csproj
+++ b/UI/UnoMaterialSample/UnoMaterialSample.Skia.Tizen/UnoMaterialSample.Skia.Tizen.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Tizen.NET.Sdk/1.1.6">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -22,8 +22,9 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
     <PackageReference Include="SkiaSharp.Views" Version="2.80.2" />
-    <PackageReference Include="Uno.UI.Skia.Tizen" Version="3.5.1" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="3.5.1" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.Material" Version="1.0.0-dev.715" />
+    <PackageReference Include="Uno.UI.Skia.Tizen" Version="3.6.0-dev.275" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="3.6.0-dev.275" Condition="'$(Configuration)'=='Debug'" />
   </ItemGroup>
   <Import Project="..\UnoMaterialSample.Shared\UnoMaterialSample.Shared.projitems" Label="Shared" />
 </Project>
