--- a/UI/UnoMaterialSample/UnoMaterialSample.Skia.WPF.Host/UnoMaterialSample.Skia.Wpf.Host.csproj
+++ b/UI/UnoMaterialSample/UnoMaterialSample.Skia.WPF.Host/UnoMaterialSample.Skia.Wpf.Host.csproj
@@ -7,8 +7,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Uno.UI.Skia.Wpf" Version="3.5.1" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="3.5.1" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Skia.Wpf" Version="3.6.0-dev.275" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="3.6.0-dev.275" Condition="'$(Configuration)'=='Debug'" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\Fonts\uno-fluentui-assets.ttf" />
