--- a/UI/UnoMaterialSample/UnoMaterialSample.Wasm/UnoMaterialSample.Wasm.csproj
+++ b/UI/UnoMaterialSample/UnoMaterialSample.Wasm/UnoMaterialSample.Wasm.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -39,10 +39,11 @@
     <!-- Note that for WebAssembly version 1.1.1 of the console logger required -->
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
-    <PackageReference Include="Uno.UI.WebAssembly" Version="3.5.1" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="3.5.1" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.Wasm.Bootstrap" Version="1.3.4" />
-    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="1.3.4" />
+    <PackageReference Include="Uno.Material" Version="1.0.0-dev.715" />
+    <PackageReference Include="Uno.UI.WebAssembly" Version="3.6.0-dev.275" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="3.6.0-dev.275" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.Wasm.Bootstrap" Version="1.3.6" />
+    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="1.3.6" />
   </ItemGroup>
   <Import Project="..\UnoMaterialSample.Shared\UnoMaterialSample.Shared.projitems" Label="Shared" Condition="Exists('..\UnoMaterialSample.Shared\UnoMaterialSample.Shared.projitems')" />
 </Project>
