--- a/UI/LocalizationSamples/Localization/UnoLocalization.Skia.Gtk/UnoLocalization.Skia.Gtk.csproj
+++ b/UI/LocalizationSamples/Localization/UnoLocalization.Skia.Gtk/UnoLocalization.Skia.Gtk.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType Condition="'$(Configuration)'=='Release'">WinExe</OutputType>
@@ -17,8 +17,8 @@
     <!-- Note that for WebAssembly version 1.1.1 of the console logger required -->
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
-    <PackageReference Include="Uno.UI.Skia.Gtk" Version="3.5.1" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="3.5.1" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Skia.Gtk" Version="3.7.0-dev.25" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="3.7.0-dev.25" Condition="'$(Configuration)'=='Debug'" />
   </ItemGroup>
   <Import Project="..\UnoLocalization.Shared\UnoLocalization.Shared.projitems" Label="Shared" />
 </Project>
