--- a/UI/LocalizationSamples/Localization/UnoLocalization.Wasm/UnoLocalization.Wasm.csproj
+++ b/UI/LocalizationSamples/Localization/UnoLocalization.Wasm/UnoLocalization.Wasm.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -39,10 +39,10 @@
     <!-- Note that for WebAssembly version 1.1.1 of the console logger required -->
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
-    <PackageReference Include="Uno.UI.WebAssembly" Version="3.5.1" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="3.5.1" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.Wasm.Bootstrap" Version="1.3.4" />
-    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="1.3.4" />
+    <PackageReference Include="Uno.UI.WebAssembly" Version="3.7.0-dev.25" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="3.7.0-dev.25" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.Wasm.Bootstrap" Version="2.1.0-dev.21" />
+    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="2.1.0-dev.21" />
   </ItemGroup>
   <Import Project="..\UnoLocalization.Shared\UnoLocalization.Shared.projitems" Label="Shared" Condition="Exists('..\UnoLocalization.Shared\UnoLocalization.Shared.projitems')" />
 </Project>
