--- a/UI/Authentication.OidcDemo/Authentication.OidcDemo/Authentication.OidcDemo.Wasm/Authentication.OidcDemo.Wasm.csproj
+++ b/UI/Authentication.OidcDemo/Authentication.OidcDemo/Authentication.OidcDemo.Wasm/Authentication.OidcDemo.Wasm.csproj
@@ -40,10 +40,10 @@
     <PackageReference Include="IdentityModel.OidcClient" Version="3.1.2" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
-    <PackageReference Include="Uno.UI.WebAssembly" Version="3.7.0-dev.2" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="3.7.0-dev.2" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.Wasm.Bootstrap" Version="2.0.0-dev.180" />
-    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="2.0.0-dev.180" />
+    <PackageReference Include="Uno.UI.WebAssembly" Version="3.7.0-dev.36" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="3.7.0-dev.36" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.Wasm.Bootstrap" Version="2.0.0" />
+    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="2.0.0" />
   </ItemGroup>
   <Import Project="..\Authentication.OidcDemo.Shared\Authentication.OidcDemo.Shared.projitems" Label="Shared" Condition="Exists('..\Authentication.OidcDemo.Shared\Authentication.OidcDemo.Shared.projitems')" />
 </Project>
