--- a/UI/Authentication.OidcDemo/Authentication.OidcDemo/Authentication.OidcDemo.Wasm/Authentication.OidcDemo.Wasm.csproj
+++ b/UI/Authentication.OidcDemo/Authentication.OidcDemo/Authentication.OidcDemo.Wasm/Authentication.OidcDemo.Wasm.csproj
@@ -2,7 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <NoWarn>NU1701</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Debug'">
@@ -42,8 +42,9 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
     <PackageReference Include="Uno.UI.WebAssembly" Version="3.7.0-dev.36" />
     <PackageReference Include="Uno.UI.RemoteControl" Version="3.7.0-dev.36" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.Wasm.Bootstrap" Version="2.0.0" />
-    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Windows.Compatibility" Version="5.0.1" />
+		<PackageReference Include="Uno.Wasm.Bootstrap" Version="2.1.0" />
+    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="2.1.0" />
   </ItemGroup>
   <Import Project="..\Authentication.OidcDemo.Shared\Authentication.OidcDemo.Shared.projitems" Label="Shared" Condition="Exists('..\Authentication.OidcDemo.Shared\Authentication.OidcDemo.Shared.projitems')" />
 </Project>
