--- a/UI/EmbeddedResources/EmbeddedResourcesSample/EmbeddedResourcesSample.Wasm/EmbeddedResourcesSample.Wasm.csproj
+++ b/UI/EmbeddedResources/EmbeddedResourcesSample/EmbeddedResourcesSample.Wasm/EmbeddedResourcesSample.Wasm.csproj
@@ -2,7 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <NoWarn>NU1701</NoWarn>
     <RootNamespace>EmbeddedResourcesSample</RootNamespace>
   </PropertyGroup>
@@ -42,8 +42,9 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
     <PackageReference Include="Uno.UI.WebAssembly" Version="3.4.0" />
     <PackageReference Include="Uno.UI.RemoteControl" Version="3.4.0" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.Wasm.Bootstrap" Version="1.3.4" />
-    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="1.3.4" />
+    <PackageReference Include="Microsoft.Windows.Compatibility" Version="5.0.1" />
+		<PackageReference Include="Uno.Wasm.Bootstrap" Version="2.1.0" />
+    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="2.1.0" />
   </ItemGroup>
   <Import Project="..\EmbeddedResourcesSample.Shared\EmbeddedResourcesSample.Shared.projitems" Label="Shared" Condition="Exists('..\EmbeddedResourcesSample.Shared\EmbeddedResourcesSample.Shared.projitems')" />
 </Project>
