--- a/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Wasm/SkiaSharpTest.Wasm.csproj
+++ b/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Wasm/SkiaSharpTest.Wasm.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
@@ -46,8 +46,9 @@
     <PackageReference Include="SkiaSharp.Views.Uno" Version="2.80.3-preview.24" />
     <PackageReference Include="Uno.UI.WebAssembly" Version="3.5.0-dev.223" />
     <PackageReference Include="Uno.UI.RemoteControl" Version="3.5.0-dev.223" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.Wasm.Bootstrap" Version="2.0.0-dev.148" />
-    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="2.0.0-dev.148" />
+    <PackageReference Include="Microsoft.Windows.Compatibility" Version="5.0.1" />
+		<PackageReference Include="Uno.Wasm.Bootstrap" Version="2.1.0" />
+    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="2.1.0" />
   </ItemGroup>
   <Import Project="..\SkiaSharpTest.Shared\SkiaSharpTest.Shared.projitems" Label="Shared" Condition="Exists('..\SkiaSharpTest.Shared\SkiaSharpTest.Shared.projitems')" />
 </Project>
