--- a/UI/TimeEntry/TimeEntryUno/TimeEntryUno.Wasm/TimeEntryUno.Wasm.csproj
+++ b/UI/TimeEntry/TimeEntryUno/TimeEntryUno.Wasm/TimeEntryUno.Wasm.csproj
@@ -1,8 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <NoWarn>NU1701</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Debug'">
@@ -44,8 +44,9 @@
     <PackageReference Include="System.Text.Json" Version="6.0.0-preview.1.21102.12" />
     <PackageReference Include="Uno.UI.WebAssembly" Version="3.6.0-dev.62" />
     <PackageReference Include="Uno.UI.RemoteControl" Version="3.6.0-dev.62" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.Wasm.Bootstrap" Version="2.0.0-dev.163" />
-    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="2.0.0-dev.163" />
+    <PackageReference Include="Microsoft.Windows.Compatibility" Version="5.0.1" />
+		<PackageReference Include="Uno.Wasm.Bootstrap" Version="2.1.0" />
+    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="2.1.0" />
   </ItemGroup>
   <Import Project="..\TimeEntryUno.Shared\TimeEntryUno.Shared.projitems" Label="Shared" Condition="Exists('..\TimeEntryUno.Shared\TimeEntryUno.Shared.projitems')" />
 </Project>
