--- a/UI/UnoMaterialSample/UnoMaterialSample.Wasm/UnoMaterialSample.Wasm.csproj
+++ b/UI/UnoMaterialSample/UnoMaterialSample.Wasm/UnoMaterialSample.Wasm.csproj
@@ -2,7 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <NoWarn>NU1701</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Debug'">
@@ -42,8 +42,9 @@
     <PackageReference Include="Uno.Material" Version="1.0.0-dev.715" />
     <PackageReference Include="Uno.UI.WebAssembly" Version="3.6.0-dev.275" />
     <PackageReference Include="Uno.UI.RemoteControl" Version="3.6.0-dev.275" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.Wasm.Bootstrap" Version="1.3.6" />
-    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="1.3.6" />
+    <PackageReference Include="Microsoft.Windows.Compatibility" Version="5.0.1" />
+		<PackageReference Include="Uno.Wasm.Bootstrap" Version="2.1.0" />
+    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="2.1.0" />
   </ItemGroup>
   <Import Project="..\UnoMaterialSample.Shared\UnoMaterialSample.Shared.projitems" Label="Shared" Condition="Exists('..\UnoMaterialSample.Shared\UnoMaterialSample.Shared.projitems')" />
 </Project>
