--- a/UI/UnoWCTDataGridSample/WCTTestbed2/WCTTestbed2.Wasm/WCTTestbed2.Wasm.csproj
+++ b/UI/UnoWCTDataGridSample/WCTTestbed2/WCTTestbed2.Wasm/WCTTestbed2.Wasm.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -39,8 +39,9 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
     <PackageReference Include="Uno.UI.WebAssembly" Version="3.1.0-beta.3" />
     <PackageReference Include="Uno.UI.RemoteControl" Version="3.1.0-beta.3" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.Wasm.Bootstrap" Version="1.4.0-dev.52" />
-    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="1.4.0-dev.52" />
+    <PackageReference Include="Microsoft.Windows.Compatibility" Version="5.0.1" />
+		<PackageReference Include="Uno.Wasm.Bootstrap" Version="2.1.0" />
+    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="2.1.0" />
   </ItemGroup>
   <Import Project="..\WCTTestbed2.Shared\WCTTestbed2.Shared.projitems" Label="Shared" Condition="Exists('..\WCTTestbed2.Shared\WCTTestbed2.Shared.projitems')" />
 </Project>
