--- a/UI/WebRTC/WebRTC/WebRTC.Wasm/WebRTC.Wasm.csproj
+++ b/UI/WebRTC/WebRTC/WebRTC.Wasm/WebRTC.Wasm.csproj
@@ -2,7 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <NoWarn>NU1701</NoWarn>
     <LangVersion>8</LangVersion>
   </PropertyGroup>
@@ -47,8 +47,9 @@
     <PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.0.1" />
     <PackageReference Include="Uno.UI.WebAssembly" Version="3.6.6" />
     <PackageReference Include="Uno.UI.RemoteControl" Version="3.6.6" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.Wasm.Bootstrap" Version="1.3.4" />
-    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="1.3.4" />
+    <PackageReference Include="Microsoft.Windows.Compatibility" Version="5.0.1" />
+		<PackageReference Include="Uno.Wasm.Bootstrap" Version="2.1.0" />
+    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="2.1.0" />
   </ItemGroup>
   <Import Project="..\WebRTC.Shared\WebRTC.Shared.projitems" Label="Shared" Condition="Exists('..\WebRTC.Shared\WebRTC.Shared.projitems')" />
   <Import Project="..\..\WebRTC.Entities\WebRTC.Entities.projitems" Label="Shared" />
